crates/solidity-v2/testing/snapshots/diagnostics_output/structure/invalid_using_directive_container/interface/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

library L {}

interface I {
    using L for uint256;
}
